kubernetes/rabbitmq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: rabbitmq
spec:
  type: ClusterIP
  ports:
  - name: amqp
    port: 5672
    targetPort: 5672
  - name: management
    port: 80
    targetPort: 15672
  selector:
    app: rabbitmq
